--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "sahan sasindu",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "mongoose": "^8.13.1"
   }
